Fix darker hover colour in Special:Investigate results table
Why:

* The Special:Investigate results table uses colours to highlight
  rows that are hovered over. One of the colours is too dark, and
  it is difficult to read the text against it.
* The colours are different shades of yellow, and were originally
  hard-coded, but were changed to design token in If858270e95.
* The design token colours themselves changed over time, and the
  darker colour became too dark for this use-case in Ibaddd124bd.

What:

* Replace the colour token that is too dark with one that is
  lighter.
* Caveat: The colour tokens used for the hover colours are not
  semantically correct, as outlined in T381094#10365695.

Bug: T381094

--- a/modules/ext.checkUser.styles/investigate.less
+++ b/modules/ext.checkUser.styles/investigate.less
@@ -101,7 +101,7 @@
 		&.ext-checkuser-investigate-table-cell-pinned,
 		&.ext-checkuser-investigate-table-cell-pinned-data-match {
 			// Use darker `color` instead of `background-color` to emphasize the cell.
-			background-color: @color-warning;
+			background-color: @background-color-content-removed;
 			transition: background-color @transition-duration-base;
 		}
 
@@ -137,7 +137,7 @@
 		td.ext-checkuser-investigate-table-cell-hover-data-match,
 		td:hover.ext-checkuser-investigate-table-cell-pinnable {
 			// Use darker `color` instead of `background-color` to emphasize the cell.
-			background-color: @color-warning;
+			background-color: @background-color-content-removed;
 		}
 	}
 
